update jvm basic